karl package Changelog
======================

4.38.1 (2017-07-14)
===================

- Changed queries that use community id to use the new
  karlex.community_id column because it's updated more reliably.

- Fixed gsa_sync to handle None values.

4.38.0 (2017-07-13)
===================

Use sso_id instead of email address for SSO

4.37.3 (2017-07-08)
===================

- Below water line: Add a Newt auxiliary table to hold and index community id.

4.37.2 (2017-06-20)
===================

Fix community indexing some more by using Newt DB 0.8, which:

- Updates the Newt Database on object id order and

- Uses upsert, so records aren't deleted during update.

4.37.1 (2017-06-06)
===================

It's a no-no to have indxes based on functions that do queries and we
ran into trouble with get_community_zoid.  The index wasn't reflecting
changes.

This release provides a database evolution that:

- Adds a trigger that pupulates object records with community ids when
  they're written.

- Forces updates of existing records to get the trigger applied.

- Replaces get_community_zoid with a function that uses the stored
  data and replaces the index that used it.

4.37.0 (2017-06-03)
===================

- remove traces of jwt login
- Remove the unused (and broken) archive communities view
- Remove an index we don't need to keep updating.
- Log catalog seaches to prepare for further newtification
- Reimplemented /arc2box/communities/ to use sql against newt

4.36.0 (2017-05-12)
===================

Newtify blog archive portlet and login fix

PRs: #154 #155 #153


4.35.0 (2017-05-12)
===================

osi 4.4.2

4.35.0 (2017-05-12)
===================

Get rid of external_link_ticket

4.34.1 (2017-05-05)
===================

Fix newt_can_view function

4.34.0 (2017-05-05)
===================

Newtify Community Recent Items, Office Dump, and digest script
segfault work-around.

Merge pull request #150 from
karlproject/fix-office-dump-for-change-in-path-index
